# platinum

./: .gitmodules  BUILD.gn  LICENSE.md  compile_flags.txt
platinum/gfx/: BUILD.gn  render.hpp
platinum/gfx/vulkan/: commandbuffer.cpp  commandbuffer.hpp  debug.cpp  debug.hpp  framebuffer.cpp  framebuffer.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  pass.cpp  pass.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render.cpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  swapchain_support.cpp  swapchain_support.hpp  sync.cpp  sync.hpp  test.vu  vulkan.hpp
platinum/io/: file.hpp
platinum/log/: BUILD.gn  log.hpp
platinum/shaders/: BUILD.gn  glslc.py
platinum/utility/: BUILD.gn  result.hpp  trait.hpp
platinum/window/: BUILD.gn  glfw.cpp  window.hpp
sample/hello_world/: BUILD.gn  main.cc
