action_foreach("shaders-fragment") {
  script = "glslc.py"

  sources = [ "shade.frag" ]

  outputs = [ "$target_gen_dir/{{source_name_part}}-fs.spv" ]

  args = [
    "{{source}}",
    "-o",
    rebase_path(target_gen_dir, root_build_dir) +
        "/{{source_name_part}}-fs.spv",
  ]
}

action_foreach("shaders-vertex") {
  script = "glslc.py"
  sources = [ "shade.vert" ]

  outputs = [ "$target_gen_dir/{{source_name_part}}-vs.spv" ]

  args = [
    "{{source}}",
    "-o",
    rebase_path(target_gen_dir, root_build_dir) +
        "/{{source_name_part}}-vs.spv",
  ]
}
